--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,11 @@ jobs:
     # Checkout the code from the repository
     - uses: actions/checkout@v4
 
-    # Set up Docker
+    # Set up Docker Buildx with the latest version (v3)
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
-    # Log in to Docker Hub or GHCR if you want to push the image (optional)
-    # If using Docker Hub, replace ghcr.io with docker.io in the push step below
+    # Log in to GitHub Container Registry (or Docker Hub if needed)
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -29,10 +28,9 @@ jobs:
 
     # Build the Docker image
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag webdav:$(date +%s)
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
     # Optionally push the image to the container registry
     - name: Push Docker image to registry
-      run: docker push ghcr.io/${{ github.repository }}/webdav:$(date +%s)
-      if: github.event_name == 'push'  # Only push the image on direct pushes to main
-
+      run: docker push ghcr.io/${{ github.repository }}/my-image-name:$(date +%s)
+      if: github.event_name == 'push'
