--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,11 @@ jobs:
     # Checkout the code from the repository
     - uses: actions/checkout@v4
 
-    # Set up Docker Buildx with the latest version (v3)
+    # Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    # Log in to GitHub Container Registry (or Docker Hub if needed)
+    # Log in to GitHub Container Registry
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -26,11 +26,13 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    # Build the Docker image
+    # Build the Docker image and tag it correctly
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag webdav:$(date +%s)
+      run: |
+        docker build . --file Dockerfile --tag ghcr.io/dockdv/webdav/webdav:$(date +%s)
 
-    # Optionally push the image to the container registry
+    # Push the image to the GitHub Container Registry
     - name: Push Docker image to registry
-      run: docker push ghcr.io/${{ github.repository }}/webdav:$(date +%s)
+      run: |
+        docker push ghcr.io/dockdv/webdav/webdav:$(date +%s)
       if: github.event_name == 'push'
