--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,15 +26,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    # Define the image tag using a timestamp
-    - name: Define image tag
-      run: echo "IMAGE_TAG=ghcr.io/dockdv/webdav/webdav:$(date +%s)" >> $GITHUB_ENV
+    # Set the image tag as an environment variable
+    - name: Set image tag
+      id: image_tag
+      run: echo "tag=$(date +%s)" >> $GITHUB_ENV
 
     # Build the Docker image with the defined tag
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_TAG }}
+      run: docker build . --file Dockerfile --tag ghcr.io/dockdv/webdav/webdav:${{ env.tag }}
 
     # Push the Docker image to the registry
     - name: Push Docker image to registry
-      run: docker push ${{ env.IMAGE_TAG }}
+      run: docker push ghcr.io/dockdv/webdav/webdav:${{ env.tag }}
       if: github.event_name == 'push'
