--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,15 +26,13 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    # Define the image tag to ensure the correct registry and namespace
-    - name: Set image tag
-      run: echo "IMAGE_TAG=ghcr.io/dockdv/webdav/webdav:$(date +%s)" >> $GITHUB_ENV
-
-    # Build the Docker image with the correct tag
+    # Build the Docker image using GitHub's default repository name
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.IMAGE_TAG }}
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}:latest
 
     # Push the Docker image to the GitHub Container Registry
     - name: Push Docker image to registry
-      run: docker push ${{ env.IMAGE_TAG }}
+      run: docker push ghcr.io/${{ github.repository }}:latest
       if: github.event_name == 'push'
+
+ 
